examples/negatives/expression_division_negative.bl
fun division(x: Int, y: Int) -> Int {
    return x / y;
}
// division operation
print(division(6, 3));